# Agent-orchestra

./: .gitignore  AGENTS.md  LOG.md  README.md  findings.md  install.sh  progress.md  requirements.txt  task_plan.md  uninstall.sh
.agents/commands/: work-issue.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: task-contract.md
codex/: AGENTS-block.md
docs/: ANTI-SLOP.md  WORKFLOW.md  guide.html
docs/design/: visual-identity.md
docs/design/visual-identity/: Pi-Orchestra Identity.dc.html
docs/notes/: 2026-07-11-codex-orchestrate-friction.md  2026-07-11-tui-spike.md  2026-07-11-v4-phase2-evidence.md  2026-07-11-v4-phase3-evidence.md  2026-07-11-v4-phase4-evidence.md  2026-07-12-phase6-evidence.md  2026-07-12-v4-phase5-evidence.md
docs/notes/2026-07-13-phase6-final-captures/: install-refresh-daemon-status.txt  stale-daemon-actionable-message.txt
docs/notes/2026-07-13-phase6b-captures/: runs-live-redraw-no-keypress.txt  runs-session-detail.txt
docs/notes/2026-07-13-phase6c-captures/: cwd-step-completion-validation.txt  cwd-validation.txt  home-first-run.txt  score-72col-ellipsis.txt  shelf-conductor-down.txt  shelf-daemon-restarted.txt
docs/prompts/: 2026-07-10-tui-v2-next-session.md  2026-07-10-v3-rust-codex-session.md  2026-07-10-v3-rust-fable-judge.md  2026-07-11-v4-bench-next-session.md  2026-07-11-v4-phase2-next-session.md  2026-07-11-v4-phase3-next-session.md  2026-07-11-v4-phase4-phase5-next-session.md  2026-07-12-v4-phase6-ux-bugfix-next-session.md
docs/reviews/: 2026-07-11-v3-rust-review.md
docs/superpowers/plans/: 2026-07-10-orc-top-v2.md  2026-07-10-pi-orchestra.md
orc_pkg/: __main__.py  control.py  metrics.py  quota.py  registry.py  runner.py
orc_pkg/tui/: __init__.py  app.py  convo.py  flow.py  glyphs.py  grouping.py  session_screen.py  theme.py
rust/: Cargo.toml
rust/crates/orc-app/: Cargo.toml
rust/crates/orc-app/src/: lib.rs  main.rs
rust/crates/orc-cli/: Cargo.toml
rust/crates/orc-cli/src/: daemon.rs  main.rs
rust/crates/orc-cli/tests/: compat_cli.rs  dispatch.rs  doctor_cli.rs  fake_pi.rs  harness_cli.rs  install.rs  rename_gate.rs  task_cli.rs
rust/crates/orc-core/: Cargo.toml
rust/crates/orc-core/src/: adapter.rs  bench.rs  contract.rs  control.rs  discovery.rs  dispatch.rs  inbox.rs  lib.rs  metrics.rs  model.rs  notification.rs  probe.rs  quota.rs  registry.rs  runner.rs  search.rs  tasks.rs
rust/crates/orc-core/src/probe/: profiles.rs
rust/crates/orc-core/tests/: bench.rs  compat_oracle.rs  contract.rs  dispatch.rs  inbox.rs  metrics.rs  probe.rs  quota.rs  registry.rs  runner.rs  search.rs  tasks.rs
rust/crates/orc-core/tests/fixtures/python-v3/: README.md  oracle.json
rust/crates/orc-core/tests/fixtures/python-v3/home/: quota.json
rust/crates/orc-core/tests/fixtures/python-v3/home/runs/current/: meta.json
rust/crates/orc-core/tests/fixtures/python-v3/home/runs/exact-usage/: meta.json
rust/crates/orc-core/tests/fixtures/python-v3/home/runs/handoff/: meta.json
rust/crates/orc-core/tests/fixtures/python-v3/home/runs/killed/: meta.json
rust/crates/orc-core/tests/fixtures/python-v3/home/runs/legacy/: meta.json
rust/crates/orc-core/tests/fixtures/python-v3/home/runs/orphaned/: meta.json
rust/crates/orc-core/tests/fixtures/python-v3/home/runs/retry/: meta.json
rust/crates/orc-core/tests/fixtures/python-v3/home/runs/rpc-agent-end/: meta.json
rust/crates/orc-core/tests/fixtures/python-v3/home/runs/session-linked/: meta.json
rust/crates/orc-core/tests/fixtures/python-v3/home/runs/truncated/: meta.json
rust/crates/orc-core/tests/fixtures/python-v3/home/runs/unicode-wide/: meta.json
rust/crates/orc-daemon/: Cargo.toml
rust/crates/orc-daemon/src/: lib.rs  main.rs
rust/crates/orc-proto/: Cargo.toml  build.rs
rust/crates/orc-proto/src/: lib.rs
rust/crates/orc-proto/tests/: dispatch.rs
rust/crates/orc-pty/: Cargo.toml
rust/crates/orc-pty/src/: lib.rs
rust/crates/orc-tui/: Cargo.toml
rust/crates/orc-tui/src/: app.rs  lib.rs  snapshot.rs  theme.rs  ui.rs
rust/spikes/vt-bakeoff/: Cargo.toml
rust/spikes/vt-bakeoff/src/: main.rs
shell/: orchestra.zsh
skills/orchestrate/: SKILL.md
skills/pi-delegate/: SKILL.md
tests/: conftest.py  live_smoke.sh  test_control.py  test_convo.py  test_flow.py  test_glyphs.py  test_grouping.py  test_metrics.py  test_quota.py  test_registry.py  test_rpc.py  test_runner.py  test_rust_parity.py  test_theme.py  test_tui.py
tools/: capture_phase2_compat.py  make_screenshots.py  orc-v3-demo.tape  run-v4-phase1-client.sh  run-v4-phase2-ghostty.sh  run_phase2_soak.sh  seed_benchmark_registry.py  seed_v3_demo.py  v4-phase1-flood.tape  v4-phase1-idle.tape  v4-phase1-narrow-phosphor.tape  v4-phase1-stage.tape  v4-phase2-narrow-phosphor.tape  v4-phase2-shell.tape  v4-phase6-home.tape
tools/fixtures/: discovered-harnesses.json  probed-harnesses.json  vhs-harnesses.json
(+5 files in other folders)
