[workspace]
members = [
    "crates/orc-core",
    "crates/orc-cli",
    "crates/orc-tui",
]
resolver = "2"

[workspace.package]
version = "0.3.0"
edition = "2024"
rust-version = "1.91"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0.103"
chrono = { version = "0.4.45", default-features = false, features = ["clock", "serde"] }
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
libc = "0.2"
ratatui = "0.30.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
signal-hook = "0.3.18"
unicode-width = "0.2.2"
ureq = { version = "3.3.0", features = ["json"] }

[workspace.lints.rust]
unsafe_code = "deny"
