[package]
name = "orc-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "orc"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
orc-core = { path = "../orc-core" }
orc-tui = { path = "../orc-tui" }
serde_json.workspace = true

[lints]
workspace = true

