[package]
name = "orc-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "pio"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
orc-core = { path = "../orc-core" }
orc-proto = { path = "../orc-proto" }
serde_json.workspace = true

[lints]
workspace = true
