[package]
name = "orc-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
libc.workspace = true
serde.workspace = true
serde_json.workspace = true
signal-hook.workspace = true
ureq.workspace = true

[lints]
workspace = true
