[package]
name = "orc-daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "orcd"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
orc-proto = { path = "../orc-proto" }
orc-pty = { path = "../orc-pty" }
orc-core = { path = "../orc-core" }
libc.workspace = true
serde.workspace = true
serde_json.workspace = true
shell-words.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
