[package]
name = "orc-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
crossterm.workspace = true
orc-core = { path = "../orc-core" }
ratatui.workspace = true
serde_json.workspace = true
unicode-width.workspace = true

[lints]
workspace = true
